tests/expectations/parser/program/pipe_eof.out
Error [EPAR0370005]: expected '}', '@', 'record', 'struct', 'async', 'const', 'function', 'inline', 'mapping', 'storage', 'script', 'transition' -- found '|'
    --> test:6:5
     |
   6 |     |}
     |     ^
